# Projeto---Zerar_guitar_flash

./: ._.vscode  mac.py  pyproject.toml  windows.py
