[project]
name = "zerar-guitar-flash"
version = "1"
description = "Projeto de automacao para zerar o jogo guitar flash"
authors = [
    {name = "João"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pynput (>=1.8.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
